[tool.poetry]
name = "trees"
version = "0.1.0"
description = ""
authors = ["amarh-ayman <amarhbishtawi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Tree = "^0.2.4"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
